--- a/styles.css
+++ b/styles.css
@@ -62,7 +62,7 @@ label {
 
 /* Estilo para los encabezados */
 h1, h2 {
-    color: #333; /* Color de texto para los encabezados */
+    color: #4cdcd; /* Color de texto para los encabezados */
 }
 
 /* Estilo para el texto del resultado */
