--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ body {
     margin: 0;
     padding: 0;
     background-color: #f8f8f8; /* Color de fondo neutro */
-    color: #d4cdcd; /* Color de texto principal */
+    color: #493e3e; /* Color de texto principal */
 }
 
 header {
